--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
    <header>ALUMIO</header> 
+   <section>
+   <div>
    <h1>Rastros de ódio "the seachers", conflitos geracionais e regionais, este clássico éuma boa pedida!</h1>
    <p>O veterano da Guerra Civil Ethan Edwards (John Wayne) chega ao Texas em 1868 e encontra o seu irmão e a família dele. Entretanto, no dia seguinte, comanches invadem o rancho e matam o seu irmão (Walter Coy) e a cunhada Martha (Dorothy Jordan). Além disso, raptam as duas filhas do casal. Ethan parte então em uma busca vingativa pelas meninas junto com o amigo Martin (Jeffrey Hunter), um mestiço que logo percebe que Ethan está obcecado por matar os índios e cheio de ódio racista. Eles encontram o corpo da mais velha, e saem em busca da caçula (Natalie Wood), que procuram por mais 5 anos no deserto.</p>
+</div>
+<div>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/9m8j7oci2gE?si=tWEkQZ2f9t8xvrUh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 </body>
 </html>
