div categoria videos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
    </section>
    <section>
 <h2>Catálago de filmes</h2>
-
+<div
+class="categoria-vídeos">
+   #vídeos aqui
+</div>
    </section>
 </body>
 
