criação da lista de vídeo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 <h2>Catálago de filmes</h2>
 <div
 class="categoria-vídeos">
-   #vídeos aqui
+   
+#vídeos aqui
+<a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
+<img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
+</a>
 </div>
    </section>
 </body>
