--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
 <h2>Catálago de filmes</h2>
 <div
 class="categoria-vídeos">
-   
-#vídeos aqui
+   #VÍDEOS AQUI
+<a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
+<img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
+</a>
+</div>
+<div
+class="categoria-vídeos">
+   #VÍDEOS AQUI
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
 <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
 </a>
