--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>Catálago de filmes</h2>
 <div
 class="categoria-vídeos">
-   #VÍDEOS AQUI
+   #SEMELHANTES
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
 <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
@@ -41,8 +41,8 @@ class="categoria-vídeos">
       <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
          <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
          <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
-            <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
-</a>
+            <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"</a>
+
 </div>
 
    </section>
