--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
    </section>
    <section>
-<h2>Catálago de filmes</h2>
+<h2>SEMELHANTES</h2>
 <div
 class="categoria-vídeos">
-   #SEMELHANTES
+   #CONFIRA!
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
 <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
