--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ class="categoria-vídeos">
    #CONFIRA!
 <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
 <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
+<a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
+   <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
 <a href="https://www.youtube.com/watch?v=6RwAWZtK5Uw">
    <img src="https://img.youtube.com/vi/6RwAWZtK5Uw/maxresdefault.jpg"
    <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
