--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@ class="categoria-vídeos">
       <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
          <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
          <a href="https://www.youtube.com/watch?v=myDQ5MO-3bE">
-            <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"</a>
+            <img src="https://img.youtube.com/vi/myDQ5MO-3bE/maxresdefault.jpg"
+         
+         
+</a>
 
 </div>
 
